--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,8 @@ android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
+     - tools
+     - platform-tools
 
     # The BuildTools version used by your project
     - build-tools-28.0.3
@@ -22,3 +22,6 @@ android:
     # if you need to run emulator(s) during your tests
     - sys-img-x86-android-28
 #    - sys-img-armeabi-v7a-android-17
+script:
+  - android list target
+  - ./gradlew connectedAndroidTest
