Adding more files

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: android
 dist: trusty
+sudo: false
 android:
   components:
     # Uncomment the lines below if you want to
     # use the latest revision of Android SDK Tools
-#     - tools
-#     - platform-tools
+    #     - tools
+    #     - platform-tools
 
     # The BuildTools version used by your project
     - build-tools-28.0.3
@@ -17,11 +18,24 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
+    licenses:
+      - 'android-sdk-preview-license-52d11cd2'
+      - 'android-sdk-license-.+'
+      - 'google-gdk-license-.+'
 
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-28
+      # Specify at least one system image,
+      # if you need to run emulator(s) during your tests
+      - sys-img-x86-android-28
 #    - sys-img-armeabi-v7a-android-17
-script:
-  - android list target
-  - ./gradlew connectedAndroidTest
+    before_script:
+      - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a
+      - emulator -avd test -no-skin -no-audio -no-window &
+      - android-wait-for-emulator
+      - adb shell input keyevent 82 &
+
+    script:
+      - android list target
+      - ./gradlew connectedAndroidTest
+
+    after_success:
+        - bash <(curl -s https://codecov.io/bash)
