--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-28
+#    - sys-img-x86-android-28
 #    - sys-img-armeabi-v7a-android-17
 before_script:
   - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
