--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ android:
     - extra-android-m2repository
     - sys-img-armeabi-v7a-android-28
   licenses:
-    - 'android-sdk-preview-license-52d11cd2'
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
@@ -28,13 +27,17 @@ android:
 #    - sys-img-x86-android-28
 #    - sys-img-armeabi-v7a-android-17
 before_script:
+  - android list target
+  - jdk_switcher use oraclejdk8
   - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
-  - android-wait-for-emulator
+  - adb wait-for-device
+  - while [[ `adb shell pm path android` == 'Error'* ]]; do sleep 2; done
+#  - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
-  - android list target
+
   - ./gradlew connectedAndroidTest
 
 after_success:
