--- a/.travis.yml
+++ b/.travis.yml
@@ -31,9 +31,9 @@ before_script:
   - jdk_switcher use oraclejdk8
   - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
   - emulator -avd test -no-skin -no-audio -no-window &
-  - adb wait-for-device
+  - android-wait-for-emulator
+#  - adb wait-for-device
   - while [[ `adb shell pm path android` == 'Error'* ]]; do sleep 2; done
-#  - android-wait-for-emulator
   - adb shell input keyevent 82 &
 
 script:
