--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,9 @@ android:
 before_script:
   - android list target
   - jdk_switcher use oraclejdk8
-  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a
-  - emulator -avd test -no-skin -no-audio -no-window &
+  - echo no | android create avd --force -n test -t android-28 --abi armeabi-v7a -c 100M
+  - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
-#  - adb wait-for-device
-  - while [[ `adb shell pm path android` == 'Error'* ]]; do sleep 2; done
   - adb shell input keyevent 82 &
 
 script:
