--- a/.travis.yml
+++ b/.travis.yml
@@ -17,19 +17,19 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-#    - sys-img-armeabi-v7a-android-27
+    - sys-img-armeabi-v7a-android-27
   licenses:
     - 'android-sdk-license-.+'
     - 'google-gdk-license-.+'
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-27
+#    - sys-img-x86-android-28
 #    - sys-img-armeabi-v7a-android-17
 before_script:
   - android list target
   - jdk_switcher use oraclejdk8
-  - echo no | android create avd --force -n test -t android-27 --abi x86
+  - echo no | android create avd --force -n test -t android-27 --abi armeabi-v7a -c 100M
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell input keyevent 82 &
