--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/app_logo_aspire"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/app_logo_aspire_circle"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -16,7 +16,7 @@
         <activity android:name=".MainActivity" />
         <activity
             android:name=".MainEmptyActivity"
-            android:label="MainEmptyActivity"
+            android:label="AspireBudgeting"
             android:theme="@style/AppTheme.NoDisplay">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
