--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@ language: android
 dist: trusty
 env:
  global:
-    - ANDROID_API_LEVEL=29
-    - ANDROID_BUILD_TOOLS_VERSION=29.0.1
+    - ANDROID_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
 android:
+ licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
  components:
     - tools
     - platform-tools
@@ -17,7 +21,9 @@ android:
     - extra-google-m2repository
     - extra-android-m2repository
     - addon-google_apis-google-$ANDROID_API_LEVEL
+before_script:
+    # Prepare pre-accepted licenses to not be promted at installation
+    - mkdir -p "$ANDROID_HOME/licenses"
+    - cp ./google-licenses/* "$ANDROID_HOME/licenses/"
 script:
     - ./gradlew build check
-after_success:
-    - bash <(curl -s https://codecov.io/bash)
