--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,29 @@
 language: android
 dist: trusty
+env:
+ global:
+    - ANDROID_API_LEVEL=25
+    - ANDROID_BUILD_TOOLS_VERSION=25.0.2
 android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
-
+ licenses:
+    - 'android-sdk-preview-license-.+'
+    - 'android-sdk-license-.+'
+    - 'google-gdk-license-.+'
+ components:
+    - tools
+    - platform-tools
     # The BuildTools version used by your project
-    - build-tools-29.0.1
-
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     # The SDK version used to compile your project
-    - android-29
-
+    - android-$ANDROID_API_LEVEL
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-28
-#    - sys-img-armeabi-v7a-android-17
-
- licenses:
-    - 'android-sdk-license-.+'
-    - 'google-gdk-license-.+'
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+before_script:
+    # Prepare pre-accepted licenses to not be promted at installation
+    - mkdir -p "$ANDROID_HOME/licenses"
+    - cp ./google-licenses/* "$ANDROID_HOME/licenses/"
+script:
+    - ./gradlew build check
