--- a/.travis.yml
+++ b/.travis.yml
@@ -1,24 +1,23 @@
 language: android
 dist: trusty
+env:
+ global:
+    - ANDROID_API_LEVEL=29
+    - ANDROID_BUILD_TOOLS_VERSION=29.0.1
 android:
-  components:
-    # Uncomment the lines below if you want to
-    # use the latest revision of Android SDK Tools
-    # - tools
-    # - platform-tools
-
+ components:
+    - tools
+    - platform-tools
     # The BuildTools version used by your project
-    - build-tools-28.0.3
-
+    - build-tools-$ANDROID_BUILD_TOOLS_VERSION
     # The SDK version used to compile your project
-    - android-28
-
+    - android-$ANDROID_API_LEVEL
     # Additional components
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-
-    # Specify at least one system image,
-    # if you need to run emulator(s) during your tests
-    - sys-img-x86-android-28
-#    - sys-img-armeabi-v7a-android-17
+    - addon-google_apis-google-$ANDROID_API_LEVEL
+script:
+    - ./gradlew build check
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
