--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,16 @@ android {
             testCoverageEnabled true
         }
     }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
+    }
 }
 
 dependencies {
@@ -32,6 +42,20 @@ dependencies {
 
     // Google Services
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    // Google Credential
+    implementation('com.google.api-client:google-api-client-android:1.26.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+
+    // Drive APIs
+    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation 'com.google.android.gms:play-services-drive:17.0.0'
+
+    // GSON
+    implementation 'com.google.http-client:google-http-client-gson:1.26.0'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
