--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.aspirebudgetingmobile.aspirebudgeting">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".activities.Dashboard"/>
+        <activity android:name=".activities.SheetsList"/>
+        <activity android:name=".activities.Dashboard" />
         <activity android:name=".activities.Login" />
         <activity android:name=".activities.Splash">
             <intent-filter>
