Tweaking lint option

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         debug {
             testCoverageEnabled true
         }
+        lintOptions {
+            abortOnError false
+        }
     }
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
