--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Material Design Library
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
     // Google Services
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
@@ -60,6 +60,10 @@ dependencies {
     // GSON
     implementation 'com.google.http-client:google-http-client-gson:1.26.0'
 
+    // Sheets API Library
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
