--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,19 @@ android {
         debug {
             testCoverageEnabled true
         }
+        lintOptions {
+            abortOnError false
+        }
+    }
+    packagingOptions {
+        exclude 'META-INF/DEPENDENCIES'
+        exclude 'META-INF/LICENSE'
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/license.txt'
+        exclude 'META-INF/NOTICE'
+        exclude 'META-INF/NOTICE.txt'
+        exclude 'META-INF/notice.txt'
+        exclude 'META-INF/ASL2.0'
     }
 }
 
@@ -28,11 +41,29 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Material Design Library
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
 
     // Google Services
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    // Google Credential
+    implementation('com.google.api-client:google-api-client-android:1.26.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+
+    // Drive APIs
+    implementation('com.google.apis:google-api-services-drive:v3-rev136-1.25.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
+    implementation 'com.google.android.gms:play-services-drive:17.0.0'
+
+    // GSON
+    implementation 'com.google.http-client:google-http-client-gson:1.26.0'
+
+    // Sheets API Library
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
+
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
