--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.aspirebudgetingmobile.aspirebudgeting"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 4
-        versionName "1.2.1_INTERNAL"
+        versionCode 5
+        versionName "1.2.2"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
