Added toast on auth failed added 1 sec delay in animation of FAB to make it smooth Implemented new way to get global context commented out loading animation (fade in fade out of currency)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".utils.App"
         android:allowBackup="true"
         android:icon="@mipmap/aspire_logo"
         android:label="@string/app_name"
