--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "com.aspirebudgetingmobile.aspirebudgeting"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 6
-        versionName "1.2.3"
+        versionCode 7
+        versionName "1.0.0_DEV" // 1.2.3 Beta
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -75,4 +75,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0-rc01'
 }
