--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
+apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     compileSdkVersion 29
@@ -7,8 +9,8 @@ android {
         applicationId "com.aspirebudgetingmobile.aspirebudgeting"
         minSdkVersion 22
         targetSdkVersion 29
-        versionCode 4
-        versionName "1.2.1_INTERNAL"
+        versionCode 7
+        versionName "1.0.0_DEV" // 1.2.3 Beta
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -66,8 +68,12 @@ dependencies {
     // BioMetric
     implementation 'androidx.biometric:biometric:1.0.1'
 
+    // Firebase Crashlytics
+    implementation 'com.google.firebase:firebase-crashlytics:17.0.1'
+
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test:rules:1.3.0-rc01'
 }
