--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,16 @@ apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
-    compileSdkVersion 29
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+    compileSdkVersion 30
     buildToolsVersion "29.0.1"
     defaultConfig {
         applicationId "com.aspirebudgetingmobile.aspirebudgeting"
         minSdkVersion 22
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode 7
         versionName "1.0.0_DEV" // 1.2.3 Beta
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
